--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -1,21 +1,5 @@
-<div class="card">
-    <div class="card-header">
-        Dynamic Form
-    </div>
-    <div class="card-body">
-        <form (ngSubmit)="onSubmit()" [formGroup]="form">
-
-            <div *ngFor="let input of inputs" class="form-row">
-                <app-input [input]="input" [form]="form"></app-input>
-            </div>
-
-            <div class="form-row">
-                <button type="submit" [disabled]="!form.valid">Save</button>
-            </div>
-        </form>
-
-        <div *ngIf="payLoad" class="form-row">
-            <strong>Saved the following values</strong><br>{{payLoad}}
-        </div>
+<div [formGroup]="form">
+    <div *ngFor="let input of inputs" class="form-row">
+        <app-input [input]="input" [form]="form"></app-input>
     </div>
 </div>
