--- a/src/app/dynamic-form/dynamic-form-input.component.html
+++ b/src/app/dynamic-form/dynamic-form-input.component.html
@@ -1,9 +1,8 @@
-<div class="form-group" [formGroup]="form">
-    <label [attr.for]="input.key">{{input.label}}</label>
+<div class="form-group" [formGroup]="form" *ngIf="!input.hidden">
+    <label [attr.for]="input.key">{{input.header}}</label>
 
     <div [ngSwitch]="input.controlType">
-
-        <input *ngSwitchCase="'textbox'" class="form-control" [formControlName]="input.key" [id]="input.key" [type]="input.controlType">
+        <input *ngSwitchCase="'textbox'" class="form-control" [formControlName]="input.key" [id]="input.key" [type]="input.type">
 
         <select *ngSwitchCase="'dropdown'" [id]="input.key" [formControlName]="input.key" class="form-control">
             <option *ngFor="let opt of input['options']" [value]="opt.key">{{opt.value}}</option>
@@ -11,11 +10,12 @@
 
         <div *ngSwitchCase="'radio'">
             <div *ngFor="let opt of input['options']" class="form-check form-check-inline">
-                <input [id]="input.key" value="{{opt.key}}" [formControlName]="input.key" class="form-check-input" [type]="'radio'" [checked]="input.value == opt.key">
+                <input [id]="input.key" value="{{opt.key}}" [formControlName]="input.key" class="form-check-input"
+                    [type]="'radio'" [checked]="input.value == opt.key">
                 <span class="form-check-label">{{opt.value}}</span>
             </div>
         </div>
     </div>
 
-    <small class="text-danger" *ngIf="!isValid">{{input.label}} is required</small>
+    <small class="text-danger" *ngIf="!isValid">{{input.header}} is required</small>
 </div>
