--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
   <!--app-dynamic-form [inputs]="inputs"></app-dynamic-form-->
-  <app-crud-table [name]="'users'" [inputs]="inputs"></app-crud-table>
+  <app-crud-table [entity]="'users'" [formElements]="inputs"></app-crud-table>
 </div>
