--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="container">
   <!--app-dynamic-form [inputs]="inputs"></app-dynamic-form-->
-  <app-crud-table [entity]="'users'" [formElements]="inputs"></app-crud-table>
+  <!--app-crud-table [entity]="'users'" [formElements]="userFormElements"></app-crud-table-->
+  <h1></h1>
+  <app-crud-table [entity]="'tasks'" [formElements]="taskFormElements"></app-crud-table>
 </div>
