adding referenced objects

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,6 @@
   <app-crud-table [entityName]="'users'" [formElements]="userFormElements"></app-crud-table>
   <h1></h1>
   <app-crud-table [entityName]="'tasks'" [formElements]="taskFormElements"></app-crud-table>
+  <h1></h1>
+  <app-crud-table [entityName]="'taskitems'" [formElements]="taskItemFormElements"></app-crud-table>
 </div>
