--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,35 @@
 <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Admininstartion</a>
+    <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-toggle="collapse"
+      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <div class="btn-group btn-group-toggle" ngbRadioGroup [(ngModel)]="currentSelection">
+          <label ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="user">User
+          </label>
+          <label ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="task">Task
+          </label>
+          <label ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="taskitem">Task item
+          </label>
+        </div>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
   <!--app-dynamic-form [inputs]="inputs"></app-dynamic-form-->
-  <app-crud-table [entityName]="'users'" [formElements]="userFormElements"></app-crud-table>
+  <app-crud-table *ngIf="currentSelection == 'user'" [entityName]="'users'" [formElements]="userFormElements"></app-crud-table>
   <h1></h1>
-  <app-crud-table [entityName]="'tasks'" [formElements]="taskFormElements"></app-crud-table>
+  <app-crud-table *ngIf="currentSelection == 'task'" [entityName]="'tasks'" [formElements]="taskFormElements"></app-crud-table>
   <h1></h1>
-  <app-crud-table [entityName]="'taskitems'" [formElements]="taskItemFormElements"></app-crud-table>
+  <app-crud-table *ngIf="currentSelection == 'taskitem'" [entityName]="'taskitems'" [formElements]="taskItemFormElements"></app-crud-table>
 </div>
