--- a/src/app/crud-table/crud-table.component.html
+++ b/src/app/crud-table/crud-table.component.html
@@ -34,5 +34,5 @@
 
 <div class="d-flex justify-content-between p-2">
   <button type="button" class="btn btn-outline-primary align-self-start" (click)="add()">Add</button>
-  <ngb-pagination [collectionSize]="models.length" [(page)]="page" [pageSize]="4"></ngb-pagination>
+  <ngb-pagination [collectionSize]="models.length" [(page)]="page" [pageSize]="itemsPerPage"></ngb-pagination>
 </div>
