table search results

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,4 +28,6 @@
   <app-crud-table *ngIf="currentSelection == 'task'" [entityName]="'tasks'" [formElements]="taskFormElements" [itemsPerPage] = "5"></app-crud-table>
   <h1></h1>
   <app-crud-table *ngIf="currentSelection == 'taskitem'" [entityName]="'taskitems'" [formElements]="taskItemFormElements" [itemsPerPage] = "5"></app-crud-table>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
 </div>
