--- a/src/app/typeorm-erd/typeorm-erd.component.css
+++ b/src/app/typeorm-erd/typeorm-erd.component.css
@@ -18,6 +18,12 @@
     stroke: #999;
     stroke-width: 1.5px;
     fill: #999;
+    font-size: 0.5em;
+}
+
+::ng-deep .edgeLabel text {
+    font-size: 0.8em;
+    font-weight: 500;
 }
 
 ::ng-deep .node .name {
