--- a/src/app/crud-table/dynamic-form/dynamic-form-input.component.html
+++ b/src/app/crud-table/dynamic-form/dynamic-form-input.component.html
@@ -5,7 +5,7 @@
         <input *ngSwitchCase="'textbox'" class="form-control" [formControlName]="input.key" [id]="input.key" [type]="input.type">
 
         <div *ngSwitchCase="'dropdown'">
-            <ng-select *ngIf="input.linkedObject" [items]="input['allValues']" [multiple]="true" [closeOnSelect]="false"
+            <ng-select *ngIf="input.linkedObject" [items]="input['allValues']" [multiple]="input['multipleSelect']" [closeOnSelect]="false"
                 [searchable]="false" [bindLabel]="input.linkedData['value']" placeholder="Select ..." [formControlName]="input.key">
             </ng-select>
 
