--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -28,6 +28,9 @@
             <label ngbButtonLabel class="btn-outline-primary btn-sm">
               <input ngbButton type="radio" value="erdiagram">ER Diagram
             </label>
+            <label ngbButtonLabel class="btn-outline-primary btn-sm">
+              <input ngbButton type="radio" value="gantt">Gantt Diagram
+            </label>
           </div>
         </ul>
       </div>
@@ -50,5 +53,7 @@
   
     <app-typeorm-erd *ngIf="currentSelection == 'erdiagram'" [entities]="allEntities"></app-typeorm-erd>
   
+    <app-gantt-chart *ngIf="currentSelection == 'gantt'"></app-gantt-chart>
+    
     <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
   </div>
